# curriculum-press

./: .dockerignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  sample.env  tsconfig.json  vite.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml  docr-clean-up.yml  version-bump.yaml
.prompts/: improvement-1.md  improvement-2.md  prd.md  task-3.md  tasks.md
client/: index.css  main.tsx
client/components/: block-editor.tsx  ui.tsx
client/contexts/: index.ts
client/lib/: api.ts
client/pages/: root.tsx  router.tsx
client/types/: index.ts
client/utils/: fetch.ts
docs/: implementation-notes.md
scripts/: start.sh
server/: api_keys.rs  app.rs  config.rs  errors.rs  main.rs  state.rs
server/domain/: mod.rs  models.rs  store.rs  validation.rs
server/mcp/: auth.rs  server.rs
server/routes/: mod.rs
