[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
path = "server/main.rs"
name = "server"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["cookie-private", "typed-header"] }
chrono = "0.4"
dotenvy = "0.15"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
  "cors",
  "fs",
  "limit",
  "timeout",
  "trace",
] }
tower-sessions = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
